@@ -26,6 +26,8 @@ ext {
     // On a Java 9+ JVM, use the host javac, default source/target, and required module flags.
     isJava8 = JavaVersion.current() == JavaVersion.VERSION_1_8
 
+    isJava16 = JavaVersion.current() == JavaVersion.VERSION_16
+
     errorproneJavacVersion = '9+181-r4173-1'
 
     parentDir = file("${rootDir}/../").absolutePath
@@ -58,6 +60,7 @@ switch (JavaVersion.current()) {
         break;
     case JavaVersion.VERSION_1_8:
     case JavaVersion.VERSION_11:
+    case JavaVersion.VERSION_16:
         break; // Supported versions
     default:
         throw new GradleException("Build the Checker Framework with JDK 8 or JDK 11." +
@@ -92,7 +95,7 @@ allprojects {
     // level (third number) if:
     //   * any new checkers have been added, or
     //   * backward-incompatible changes have been made to APIs or elsewhere.
-    version '3.15.1-SNAPSHOT'
+    version '3.17.0'
 
     repositories {
         mavenCentral()
@@ -354,8 +357,18 @@ def createCheckTypeTask(projectName, taskName, checker, args = []) {
         } else {
             options.fork = true
             options.forkOptions.jvmArgs += [
+                // These are required in Java 16+ because the --illegal-access option is set to deny
+                // by default.  None of these packages are accessed via reflection, so the module
+                // only needs to be exported, but not opened.
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                // Required because the Checker Framework reflectively accesses private members in com.sun.tools.javac.comp.
                 "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                ]
+            ]
        }
     }
 }
@@ -363,8 +376,8 @@ def createCheckTypeTask(projectName, taskName, checker, args = []) {
 /**
  * Returns a list of all the Java files that should be formatted for the given project. These are:
  *
- * All java files in the main sourceSet.
- * All java files in the tests directory that compile.
+ * All Java files in the main sourceSet.
+ * All Java files in the tests directory that compile.
  *
  * @param projectName name of the project to format
  * @return a list of all Java files that should be formatted for projectName
@@ -375,10 +388,11 @@ List<String> getJavaFilesToFormat(projectName) {
         javaFiles.addAll(set.java.files)
     }
 
-    // Collect all java files in tests directory
+    // Collect all Java files in tests directory
     fileTree("${project(projectName).projectDir}/tests").visit { details ->
         // If you change this, also change checker/bin-devel/git.pre-commit
         if (!details.path.contains("nullness-javac-errors")
+                && !details.path.contains("calledmethods-delomboked")
                 && !details.path.contains("returnsreceiverdelomboked")
                 && !details.path.contains("build")
                 && details.name.endsWith('.java')) {
@@ -386,14 +400,14 @@ List<String> getJavaFilesToFormat(projectName) {
         }
     }
 
-    // Collect all java files in jtreg directory
+    // Collect all Java files in jtreg directory
     fileTree("${project(projectName).projectDir}/jtreg").visit { details ->
         if (!details.path.contains("nullness-javac-errors") && details.name.endsWith('.java')) {
             javaFiles.add(details.file)
         }
     }
 
-    // Collect all java files in jtregJdk11 directory
+    // Collect all Java files in jtregJdk11 directory
     fileTree("${project(projectName).projectDir}/jtregJdk11").visit { details ->
         if (!details.path.contains("nullness-javac-errors") && details.name.endsWith('.java')) {
             javaFiles.add(details.file)
@@ -405,6 +419,24 @@ List<String> getJavaFilesToFormat(projectName) {
         args += project(projectName).relativePath(f)
     }
     return args
+}
+
+task writeListOfJavaFilesToFormat(group: 'Format') {
+  description "Writes a list of Java files subject to formatting, to ${buildDir}/javafiles.txt"
+  doLast {
+    mkdir buildDir
+    File list = new File("${buildDir}/javafiles.txt");
+    list.createNewFile();
+    FileWriter fileWriter = new FileWriter(list)
+    subprojects.forEach {
+      if (!it.name.startsWith("checker-qual-android")) {
+        for (String fileName : getJavaFilesToFormat(it.name)) {
+          fileWriter.write(fileName)
+          fileWriter.write(System.lineSeparator())
+        }
+      }
+    }
+  }
 }
 
 task htmlValidate(type: Exec, group: 'Format') {
@@ -646,7 +678,7 @@ subprojects {
         //  * Uncomment "-Werror"
         //  * Don't edit framework/build.gradle to use the same version number
         //    (it is updated when the annotated version of Guava is updated).
-        errorprone group: 'com.google.errorprone', name: 'error_prone_core', version: '2.7.1'
+        errorprone group: 'com.google.errorprone', name: 'error_prone_core', version: '2.8.0'
     }
 
     task checkFormat(type: Exec, dependsOn: [getCodeFormatScripts, pythonIsInstalled], group: 'Format') {
@@ -662,6 +694,9 @@ subprojects {
             }
             args += "${formatScriptsHome}/check-google-java-format.py"
             args += getJavaFilesToFormat(project.name)
+            // Since the scripts are downloaded from third-party Github, the environment variable
+            // is the only way to add the necessary open:
+            environment('JDK_JAVA_OPTIONS', '--add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED')
         }
         ignoreExitValue = true
         doLast {
@@ -819,7 +854,16 @@ subprojects {
                                     // uses the jdk.jdeps module.
                                     "-javacoptions:--add-modules jdk.jdeps",
                                     "-javacoptions:--add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                                     "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                                    "-vmoptions:--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
                             ]
                         }
                         if (project.name.is('framework')) {
